--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libyggdrasil"]
 	path = libyggdrasil
-	url = https://gitlab.ti.bfh.ch/sagen1/libyggdrasil
+	url = https://gitlab.ti.bfh.ch/yggdrasil/libyggdrasil
